trying to fix icon

--- a/SplashMol/res.qrc
+++ b/SplashMol/res.qrc
@@ -1,5 +1,5 @@
 <RCC>
-    <qresource prefix="/">
+    <qresource prefix="/assets">
         <file>assets/SplashMol.png</file>
     </qresource>
 </RCC>
