--- a/SplashMol/app.ui
+++ b/SplashMol/app.ui
@@ -15,7 +15,7 @@
   </property>
   <property name="windowIcon">
    <iconset resource="res.qrc">
-    <normaloff>:/assets/SplashMol.png</normaloff>:/assets/SplashMol.png</iconset>
+    <normaloff>:/assets/assets/SplashMol.png</normaloff>:/assets/assets/SplashMol.png</iconset>
   </property>
   <property name="toolTip">
    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
@@ -41,16 +41,6 @@
    </property>
    <property name="text">
     <string>Type in your formula here!</string>
-   </property>
-  </widget>
-  <widget class="QTextBrowser" name="resultBox">
-   <property name="geometry">
-    <rect>
-     <x>135</x>
-     <y>100</y>
-     <width>141</width>
-     <height>80</height>
-    </rect>
    </property>
   </widget>
   <widget class="QPushButton" name="calcButton">
@@ -101,6 +91,22 @@
    </property>
    <property name="flat">
     <bool>false</bool>
+   </property>
+  </widget>
+  <widget class="QLabel" name="resultLabel">
+   <property name="geometry">
+    <rect>
+     <x>180</x>
+     <y>130</y>
+     <width>59</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
+   </property>
+   <property name="textFormat">
+    <enum>Qt::MarkdownText</enum>
    </property>
   </widget>
  </widget>
