--- a/SplashMol/app.ui
+++ b/SplashMol/app.ui
@@ -43,6 +43,16 @@
     <string>Type in your formula here!</string>
    </property>
   </widget>
+  <widget class="QTextBrowser" name="resultBox">
+   <property name="geometry">
+    <rect>
+     <x>135</x>
+     <y>100</y>
+     <width>141</width>
+     <height>80</height>
+    </rect>
+   </property>
+  </widget>
   <widget class="QPushButton" name="calcButton">
    <property name="geometry">
     <rect>
@@ -91,22 +101,6 @@
    </property>
    <property name="flat">
     <bool>false</bool>
-   </property>
-  </widget>
-  <widget class="QLabel" name="resultLabel">
-   <property name="geometry">
-    <rect>
-     <x>180</x>
-     <y>130</y>
-     <width>59</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>TextLabel</string>
-   </property>
-   <property name="textFormat">
-    <enum>Qt::MarkdownText</enum>
    </property>
   </widget>
  </widget>
