--- a/SplashMol/app.ui
+++ b/SplashMol/app.ui
@@ -43,16 +43,6 @@
     <string>Type in your formula here!</string>
    </property>
   </widget>
-  <widget class="QTextBrowser" name="resultBox">
-   <property name="geometry">
-    <rect>
-     <x>135</x>
-     <y>100</y>
-     <width>141</width>
-     <height>80</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QPushButton" name="calcButton">
    <property name="geometry">
     <rect>
@@ -102,6 +92,44 @@
    <property name="flat">
     <bool>false</bool>
    </property>
+  </widget>
+  <widget class="QGroupBox" name="groupBox">
+   <property name="geometry">
+    <rect>
+     <x>130</x>
+     <y>90</y>
+     <width>161</width>
+     <height>101</height>
+    </rect>
+   </property>
+   <property name="title">
+    <string>Result</string>
+   </property>
+   <widget class="QLabel" name="resultLabel">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>30</y>
+      <width>141</width>
+      <height>60</height>
+     </rect>
+    </property>
+    <property name="locale">
+     <locale language="English" country="UnitedStates"/>
+    </property>
+    <property name="text">
+     <string> See result here</string>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::RichText</enum>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+    <property name="wordWrap">
+     <bool>false</bool>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources>
