--- a/SplashMol/app.ui
+++ b/SplashMol/app.ui
@@ -23,31 +23,21 @@
   <widget class="QLineEdit" name="lineEdit">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>40</y>
-     <width>281</width>
+     <x>20</x>
+     <y>20</y>
+     <width>261</width>
      <height>41</height>
     </rect>
    </property>
-  </widget>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>70</x>
-     <y>10</y>
-     <width>161</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Type in your formula here!</string>
+   <property name="placeholderText">
+    <string>Type in your formula here......</string>
    </property>
   </widget>
   <widget class="QPushButton" name="calcButton">
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>90</y>
+     <y>80</y>
      <width>113</width>
      <height>71</height>
     </rect>
@@ -72,7 +62,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>160</y>
+     <y>150</y>
      <width>113</width>
      <height>31</height>
     </rect>
@@ -97,7 +87,7 @@
    <property name="geometry">
     <rect>
      <x>130</x>
-     <y>90</y>
+     <y>70</y>
      <width>161</width>
      <height>101</height>
     </rect>
@@ -118,7 +108,7 @@
      <locale language="English" country="UnitedStates"/>
     </property>
     <property name="text">
-     <string> See result here</string>
+     <string>&lt;b&gt; See result here &lt;/b&gt;</string>
     </property>
     <property name="textFormat">
      <enum>Qt::RichText</enum>
