--- a/SplashMol/app.ui
+++ b/SplashMol/app.ui
@@ -25,8 +25,8 @@
     <rect>
      <x>20</x>
      <y>20</y>
-     <width>311</width>
-     <height>41</height>
+     <width>310</width>
+     <height>40</height>
     </rect>
    </property>
    <property name="placeholderText">
@@ -36,10 +36,10 @@
   <widget class="QPushButton" name="calcButton">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>12</x>
      <y>80</y>
-     <width>113</width>
-     <height>71</height>
+     <width>110</width>
+     <height>70</height>
     </rect>
    </property>
    <property name="text">
@@ -61,10 +61,10 @@
   <widget class="QPushButton" name="aboutButton">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>12</x>
      <y>150</y>
-     <width>113</width>
-     <height>31</height>
+     <width>110</width>
+     <height>30</height>
     </rect>
    </property>
    <property name="text">
@@ -88,9 +88,14 @@
     <rect>
      <x>130</x>
      <y>70</y>
-     <width>201</width>
-     <height>111</height>
+     <width>200</width>
+     <height>110</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>.SF NS Text</family>
+    </font>
    </property>
    <property name="title">
     <string>Result</string>
@@ -100,8 +105,8 @@
      <rect>
       <x>10</x>
       <y>20</y>
-      <width>181</width>
-      <height>81</height>
+      <width>180</width>
+      <height>80</height>
      </rect>
     </property>
     <property name="locale">
