--- a/SplashMol/app.ui
+++ b/SplashMol/app.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>350</width>
-    <height>200</height>
+    <height>220</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -29,6 +29,11 @@
      <height>40</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <pointsize>16</pointsize>
+    </font>
+   </property>
    <property name="placeholderText">
     <string>Type in your formula here......</string>
    </property>
@@ -37,13 +42,17 @@
    <property name="geometry">
     <rect>
      <x>12</x>
-     <y>80</y>
+     <y>100</y>
      <width>110</width>
      <height>70</height>
     </rect>
    </property>
    <property name="text">
     <string>Calculate!</string>
+   </property>
+   <property name="icon">
+    <iconset resource="res.qrc">
+     <normaloff>:/assets/assets/calc.png</normaloff>:/assets/assets/calc.png</iconset>
    </property>
    <property name="autoRepeat">
     <bool>true</bool>
@@ -62,13 +71,17 @@
    <property name="geometry">
     <rect>
      <x>12</x>
-     <y>150</y>
+     <y>170</y>
      <width>110</width>
      <height>30</height>
     </rect>
    </property>
    <property name="text">
     <string>About</string>
+   </property>
+   <property name="icon">
+    <iconset resource="res.qrc">
+     <normaloff>:/assets/assets/about.png</normaloff>:/assets/assets/about.png</iconset>
    </property>
    <property name="autoRepeat">
     <bool>true</bool>
@@ -87,7 +100,7 @@
    <property name="geometry">
     <rect>
      <x>130</x>
-     <y>70</y>
+     <y>90</y>
      <width>200</width>
      <height>110</height>
     </rect>
@@ -100,6 +113,9 @@
    <property name="title">
     <string>Result</string>
    </property>
+   <property name="flat">
+    <bool>false</bool>
+   </property>
    <widget class="QLabel" name="resultLabel">
     <property name="geometry">
      <rect>
@@ -108,6 +124,11 @@
       <width>180</width>
       <height>80</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+     </font>
     </property>
     <property name="locale">
      <locale language="English" country="UnitedStates"/>
@@ -125,6 +146,40 @@
      <bool>false</bool>
     </property>
    </widget>
+  </widget>
+  <widget class="QRadioButton" name="radioButtonSchool">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>70</y>
+     <width>161</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>High School Mode</string>
+   </property>
+   <property name="icon">
+    <iconset resource="res.qrc">
+     <normaloff>:/assets/assets/school.png</normaloff>:/assets/assets/school.png</iconset>
+   </property>
+  </widget>
+  <widget class="QRadioButton" name="radioButtonNormal">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>70</y>
+     <width>141</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Normal Mode</string>
+   </property>
+   <property name="icon">
+    <iconset resource="res.qrc">
+     <normaloff>:/assets/assets/normal.png</normaloff>:/assets/assets/normal.png</iconset>
+   </property>
   </widget>
  </widget>
  <resources>
