--- a/SplashMol/app.ui
+++ b/SplashMol/app.ui
@@ -47,8 +47,11 @@
      <height>70</height>
     </rect>
    </property>
+   <property name="autoFillBackground">
+    <bool>false</bool>
+   </property>
    <property name="text">
-    <string>Calculate!</string>
+    <string>Calculate</string>
    </property>
    <property name="icon">
     <iconset resource="res.qrc">
