--- a/SplashMol/app.ui
+++ b/SplashMol/app.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>350</width>
-    <height>220</height>
+    <height>250</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -42,7 +42,7 @@
    <property name="geometry">
     <rect>
      <x>12</x>
-     <y>100</y>
+     <y>130</y>
      <width>110</width>
      <height>70</height>
     </rect>
@@ -74,7 +74,7 @@
    <property name="geometry">
     <rect>
      <x>12</x>
-     <y>170</y>
+     <y>200</y>
      <width>110</width>
      <height>30</height>
     </rect>
@@ -103,9 +103,9 @@
    <property name="geometry">
     <rect>
      <x>130</x>
-     <y>90</y>
+     <y>119</y>
      <width>200</width>
-     <height>110</height>
+     <height>111</height>
     </rect>
    </property>
    <property name="font">
@@ -150,39 +150,83 @@
     </property>
    </widget>
   </widget>
-  <widget class="QRadioButton" name="radioButtonSchool">
-   <property name="geometry">
-    <rect>
-     <x>170</x>
-     <y>70</y>
-     <width>161</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>High School Mode</string>
-   </property>
-   <property name="icon">
-    <iconset resource="res.qrc">
-     <normaloff>:/assets/assets/school.png</normaloff>:/assets/assets/school.png</iconset>
-   </property>
-  </widget>
-  <widget class="QRadioButton" name="radioButtonNormal">
+  <widget class="QGroupBox" name="groupBox_2">
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>70</y>
-     <width>141</width>
-     <height>20</height>
+     <y>60</y>
+     <width>311</width>
+     <height>61</height>
     </rect>
    </property>
-   <property name="text">
-    <string>Normal Mode</string>
+   <property name="title">
+    <string>Mode</string>
    </property>
-   <property name="icon">
-    <iconset resource="res.qrc">
-     <normaloff>:/assets/assets/normal.png</normaloff>:/assets/assets/normal.png</iconset>
+   <property name="checkable">
+    <bool>false</bool>
    </property>
+   <widget class="QSpinBox" name="spinBox">
+    <property name="geometry">
+     <rect>
+      <x>130</x>
+      <y>25</y>
+      <width>31</width>
+      <height>21</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="radioButtonNormal">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>20</y>
+      <width>91</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Normal</string>
+    </property>
+    <property name="icon">
+     <iconset resource="res.qrc">
+      <normaloff>:/assets/assets/normal.png</normaloff>:/assets/assets/normal.png</iconset>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="radioButtonSchool">
+    <property name="geometry">
+     <rect>
+      <x>180</x>
+      <y>20</y>
+      <width>121</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>High School</string>
+    </property>
+    <property name="icon">
+     <iconset resource="res.qrc">
+      <normaloff>:/assets/assets/school.png</normaloff>:/assets/assets/school.png</iconset>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>100</x>
+      <y>20</y>
+      <width>31</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Digits:</string>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources>
