--- a/SplashMol/res.qrc
+++ b/SplashMol/res.qrc
@@ -6,5 +6,6 @@
         <file>assets/normal.png</file>
         <file>assets/finish.png</file>
         <file>assets/calc.png</file>
+        <file>assets/settings.png</file>
     </qresource>
 </RCC>
